--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,63 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 body {
-  background: #e6c60f;
-  color: black;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 15% 10% auto 12%;
   font-family: "Courier New", Courier, monospace;
 }
 
-header, nav, aside, section, footer {
+header, nav, aside, footer {
   font-size: 30px;
   text-align: center;
   padding: 20px;
 }
 
-.contenedor {
-  width: 98%;
-  max-width: 1000px;
-  border: 10px solid white;
-  margin: auto;
-  font-size: 25px;
-  line-height: 50px;
+header {
+  grid-column: 1/6;
+  background: chocolate;
+}
+
+nav {
+  background: forestgreen;
+  grid-column: 1/6;
+}
+
+aside {
+  background: gray;
+}
+
+footer {
+  background: lightcoral;
+  grid-column: 1/6;
+}
+
+main {
+  background: #e6c60f;
+  grid-column: 2/6;
+}
+
+section {
+  padding: 20px;
+}
+section .contenedor {
+  width: 100%;
+  padding: 0px;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(3, minmax(150px, auto));
+}
+section .contenedor .card {
+  background-size: cover;
+}
+section .contenedor .card .content {
+  color: white;
   text-align: center;
 }
-.contenedor div {
-  display: block;
-  padding: 20px;
-  color: white;
-  background: cadetblue;
-  box-shadow: 2px 2px 10px rgba(25, 14, 15, 0.15);
+section .contenedor .card .content p {
+  background: rgba(25, 14, 15, 0.15);
+}
+section .contenedor .card .content a {
+  color: wheat;
+  text-decoration: none;
+  background: rgba(25, 14, 15, 0.15);
 }/*# sourceMappingURL=style.css.map */
