--- a/css/style.scss
+++ b/css/style.scss
@@ -70,7 +70,11 @@ section {
 
             .content {
                 color: white;
-                text-align: center;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
 
                 p {
                     background: rgba(25, 14, 15, 0.15);
