--- a/css/practica/practica3.css
+++ b/css/practica/practica3.css
@@ -5,12 +5,14 @@ main {
 
     grid-template-columns: 
         [sidebar-start] 1fr
-        [contendio-start] 2fr;
+        [sidebar-end contendio-start] 2fr
+        [contenido-end];
     
     grid-template-rows: 
         [header-start] 1fr
-        [contenido-start] 2fr
-        [footer-start] 1fr;
+        [header-end contenido-start] 2fr
+        [footer-start] 1fr
+        [footer-end];
 }
 
 main > * {
@@ -23,13 +25,14 @@ main > * {
 
 header {
     /* grid-column: sidebar-start / span 2; */
-    grid-column: sidebar-start / span 2;
+    grid-column: sidebar-start / contenido-end;
 }
 
 aside {
-    grid-row: contenido-start / span 2;
+    grid-row: header-end / footer-end;
 }
 
 footer {
     /* grid-column: sidebar-start / -1; */
+    grid-column: contendio-start / contenido-end
 }
